# booksnap

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  RELEASING.md  app.plugin.js  eslint.config.js  eslint.config.mjs  expo-module.config.json  index.html  package.json  pnpm-lock.yaml  schema.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
android/: .gitignore  build.gradle  hunspell-download.gradle
android/lab/: AGENT.md  emulator_daemon.py  lab.toml  pyproject.toml  results.tsv
android/lab/backends/: android.py
android/scripts/: boot-emulator.sh  ktlint.sh
android/test-harness/: .gitignore  build.gradle.kts  settings.gradle.kts
android/test-harness/app/: build.gradle.kts
android/test-harness/scripts/: download-dictionaries.sh
ios/: .swiftlint.yml  BookSnap.podspec  BookSnapModule.swift  PageResult.swift
ios/lab/: .gitignore  AGENT.md  Dockerfile  lab.toml  pyproject.toml  results.tsv  simulator_daemon.py
ios/lab/backends/: ios.py
ios/pipeline/: BookSnapPipeline.swift
ios/scripts/: boot-simulator.sh  swiftlint.sh
ios/test-harness/: .gitignore  project.yml
ios/test-harness/BookSnapHarness/: App.swift
ios/test-harness/BookSnapHarness.xcodeproj/: project.pbxproj
plugin/: index.cjs  index.js
scripts/: deploy-reports.sh  generate-reports.sh  integration-test.sh  prepack-checks.sh
shared/python/: pyproject.toml
shared/python/booksnap_labs/: backend_base.py  daemon_base.py
shared/python/booksnap_labs/tools/: diagnose.py  diff_report.py  visualize_bounds.py
src/: index.test.ts  index.ts  types.ts
(+30 files in other folders)
