[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backends"]

[project]
name = "booksnap-android-lab"
version = "0.0.0dev"
description = "Autoresearch lab for BookSnap Android OCR pipeline"
requires-python = ">=3.12"
dependencies = [
    "booksnap-labs",
]

[tool.uv.sources]
booksnap-labs = { path = "../../shared/python", editable = true }
